feat: add endpoin for upload avatar
