# user/entity.go
@@ -3,10 +3,11 @@ package user
 import "time"
 
 type User struct {
-	ID           int
-	Username     string
-	Email        string
-	PasswordHash string
-	Token        string
-	CreatedAt    time.Time
+	ID             int
+	Username       string
+	Email          string
+	PasswordHash   string
+	Token          string
+	AvatarFileName string
+	CreatedAt      time.Time
 }
